# qt-widgets-template

./: CMakeLists.txt  README.md
forms/: mainwindow.ui
